feat: apply Strategy pattern to TransactionStore and add expenses endpoint
Extracts regular search logic into RegularSearchStrategy with helper classes.
Fixes sumDistinct->sum bug